fix spacing

--- a/default.css
+++ b/default.css
@@ -97,8 +97,7 @@
     }
 
     ul.contact {
-        margin: 0;
-        padding: 1em 0em 0em 0em;
+        margin: 2em 0;
         list-style: none;
     }
 
@@ -240,6 +239,7 @@
 
     #menu li a, #menu li span {
         display: inline-block;
+        margin-left: -4px;
         padding: 1em 1.5em;
         letter-spacing: 0.20em;
         text-decoration: none;
@@ -425,13 +425,14 @@ ul.events .event-spacetime {
     background-image: url('images/mchacks-banner.jpg');
     background-position: center;
     background-size: cover;
+    background-origin: padding-box;
     color: white;
 }
 
 .mchacks-banner .trans-black-overlay {
     background-origin: padding-box;
     background-color: rgba(0, 0, 0, 0.75);
-    padding: 3em 0;
+    padding: 6em 0;
     width: 100%;
     height: 100%;
 }
@@ -447,6 +448,10 @@ ul.events .event-spacetime {
 
 .service-descriptions p {
     text-align: justify;
+}
+
+.service-descriptions h3 {
+    margin: 1em 0;
 }
 
 .centering {
